chore: document api
