# openapi.yaml
@@ -10,7 +10,7 @@ paths:
   /auth/current-user:
     get:
       tags:
-        - User
+        - Authentication
       summary: 'Get current authenticated user'
       operationId: 369bc4826074631c96a7bb5c08b4bed6
       responses:
@@ -24,8 +24,56 @@ paths:
           $ref: '#/components/responses/401'
         '403':
           $ref: '#/components/responses/403'
+  '/users/{userUuid}/enrolled_courses ':
+    get:
+      tags:
+        - User
+      summary: 'Get the enrolled courses of a user'
+      operationId: 458252243345eaf52032427e0188c99b
+      parameters:
+        -
+          name: userUuid
+          in: path
+          description: 'The UUID of the user'
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResource'
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
 components:
   schemas:
+    JsonPaginator:
+      properties:
+        meta:
+          properties:
+            links:
+              properties: {  }
+            current_page:
+              type: integer
+            from:
+              type: integer
+            last_page:
+              type: integer
+            path:
+              type: string
+            per_page:
+              type: integer
+            to:
+              type: integer
+            total:
+              type: integer
+          type: object
+      type: object
     UserResource:
       properties:
         uuid:
@@ -116,3 +164,13 @@ components:
                 description: 'The error message'
                 type: string
             type: object
+security:
+  -
+    securityScheme: LocalhostOAuth
+    type: oauth2
+    flows:
+      authorizationCode:
+        authorizationUrl: 'http://talentpulse-backend.localhost/auth/methods/oauth/authorize'
+        tokenUrl: 'http://talentpulse-backend.localhost/auth/methods/oauth/token'
+        refreshUrl: 'http://talentpulse-backend.localhost/auth/methods/oauth/token/refresh'
+        scopes: {  }
